Fixing spacing issues.

--- a/src/main/webapp/css/basic.css
+++ b/src/main/webapp/css/basic.css
@@ -2,6 +2,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+center {
+	padding: 0 0 1em 0;
+}
 
 #copyright{
 	font-size:110%;
